[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pawpayments"
version = "0.1.0"
description = "Official Python SDK for the PawPayments Native V2 API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "PawPayments", email = "support@pawpayments.com" }]
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.28",
  "httpx>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://pawpayments.com"
Documentation = "https://docs.pawpayments.com"
Source = "https://github.com/pawpayments/python-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/pawpayments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
